Fix index.html spacing, update style.css

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 body {
- background-color: orange; 
- color: white;
+  background-color: orange; 
+  color: white;
+  text-align: center;
 }
 
 body h1 {
- color: black;
+  color: black;
 }
